# GhomalaBackendV2

./: .env.example  config.py  pyproject.toml  requirements.txt  run.py
app/: main.py
app/routes/: __init__.py  api.py
app/services/: rag.py
