[project]
name = "rag-api"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "flask-cors>=6.0.0",
    "flask>=3.1.1",
    "langchain-chroma>=0.2.4",
    "langchain-core>=0.3.62",
    "langchain>=0.3.25",
    "langchain-openai>=0.3.18",
    "upstash-vector>=0.8.0",
    "langchain-community>=0.3.24",
    "pypdf>=5.5.0",
]
